--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/swagger": "^7.2.0",
     "@prisma/client": "5.8.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/express-session": "^1.17.10",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express-session": "^1.17.3",
     "nestjs-prisma": "^0.22.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -47,6 +49,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
