--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.2.0",
-    "@prisma/client": "5.8.1",
+    "@prisma/client": "^5.8.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.17.10",
     "bcrypt": "^5.1.1",
