--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "prisma generate"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@knaadh/nestjs-drizzle-postgres": "^1.0.0",
+    "@knaadh/nestjs-drizzle-mysql2": "^1.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/passport": "^10.0.3",
@@ -34,11 +33,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.33.0",
     "express-session": "^1.17.3",
+    "mysql2": "^3.11.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "postgres": "^3.4.4",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
@@ -63,7 +61,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
-    "prisma": "^5.8.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
