--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@prisma/client": "^5.19.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.18.0",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
