--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "mysql2": "^3.11.3",
+    "nanoid": "^5.0.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.14",
