--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,6 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "strictNullChecks": false
+        "strict": false
     }
 }
