2024/10/12 Update package.json

--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/testing": "^10.4.4",
-    "@prisma/client": "^5.20.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.18.0",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.34.1",
     "express-session": "^1.18.1",
     "jest": "^29.7.0",
     "mysql2": "^3.11.3",
