--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/testing": "^10.4.4",
     "@types/express-session": "^1.18.0",
+    "@types/node": "^22.7.5",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
