--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "deno run -RWNE --allow-ffi ./src/main.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "deno run -A ./src/main.ts",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@knaadh/nestjs-drizzle-mysql2": "^1.0.1",
@@ -23,7 +18,6 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
-    "@nestjs/testing": "^10.4.4",
     "@types/express-session": "^1.18.0",
     "@types/node": "^22.7.5",
     "argon2": "^0.41.1",
@@ -31,7 +25,6 @@
     "class-validator": "^0.14.1",
     "drizzle-orm": "^0.34.1",
     "express-session": "^1.18.1",
-    "jest": "^29.7.0",
     "mysql2": "^3.11.3",
     "nanoid": "^5.0.7",
     "passport": "^0.7.0",
@@ -44,10 +37,8 @@
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.13",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "drizzle-kit": "^0.24.2",
@@ -57,24 +48,6 @@
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
