2024/10/19 Install some require modules back

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "isolatedDeclarations": true,
+    "noFallthroughCasesInSwitch": false,
+    "strictBindCallApply": false,
+    "noImplicitAny": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strict": false
