--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.4",
-    "ts-loader": "^9.5.1"
+    "source-map-support": "^0.5.21"
   }
 }
