--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.5",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/testing": "^10.4.5",
     "@types/express-session": "^1.18.0",
-    "@types/node": "^22.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-orm": "^0.34.1",
+    "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mysql2": "^3.11.3",
     "nanoid": "^5.0.7",
@@ -29,9 +30,11 @@
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.2.2",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.16.13",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "drizzle-kit": "^0.24.2",
@@ -39,6 +42,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.3"
   }
 }
